--- a/web/index.html
+++ b/web/index.html
@@ -20,10 +20,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="site2021">
+  <meta name="apple-mobile-web-app-title" content="teshi.dev">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>site2021</title>
+  <title>teshi.dev</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
