--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="お客様に価値を届けるオアダイ">
-  <meta name="theme-color" content="#80CBC4">
+  <meta name="theme-color" content="#ABD3D8">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
